[package]
name = "banner-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
textwrap = "0.16"


[[bin]]
name = "banbu"
path = "src/main.rs"

