[package]
name = "banner-builder"
version = "0.2.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Simple image and banner generator for YouTube thumbnails, Meetups, social networks"
keywords = ["cli", "image", "thumbnail"]
categories = ["images"]
readme = "README.md"
repository = "https://github.com/szabgab/banner-builder.rs"
homepage = "https://banner-builder.code-maven.com/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = ["/site"]

[dependencies]
clap = { version = "4.3", features = ["derive"] }
image = "0.25"
imageproc = "0.24"
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
textwrap = "0.16"
log = "0.4"
simple_logger = "4.3"
tempfile = "3.9.0"
ab_glyph = "0.2.26"

[[bin]]
name = "banbu"
path = "src/main.rs"

